traefik/traefik-dashboard.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
spec:
  rules:
    - host: dashboard.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard-service
                port:
                  name: dashboard

# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: traefik-dashboard
# spec:
#   routes:
#   - match: Host(`traefik.localhost`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
#     kind: Rule
#     services:
#     - name: dashboard@internal
#       kind: TraefikService

# spec:
#   rules:
#     - host: traefik.localhost
#       http:
#         paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: jenkins
#               port:
#                 name: http
